fix: update umami domain name

--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<script src="https://kit.fontawesome.com/41e44c00dc.js" crossorigin="anonymous"></script>
-		<script async src="https://umami.07102020.xyz/script.js" data-website-id="cd56699d-a3de-452b-b3b2-a0e4c8dde779"></script>
+		<script
+			async
+			src="https://umami.07102020.xyz/script.js"
+			data-website-id="cd56699d-a3de-452b-b3b2-a0e4c8dde779"
+			data-domains="taksedap.vercel.app"
+		></script>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@picocss/pico@next/css/pico.min.css"
